# blitz-1

./: .gitignore  CMakeLists.txt
benchmarks/: CMakeLists.txt  cfd.cpp  haney.cpp  hao-he.cpp  stencil.cpp
blitz/: CMakeLists.txt  array-impl.h  array.cc  array.h  bench.cc  bench.h  benchext.cc  benchext.h  blitz.h  bounds.h  bzconfig.h  bzdebug.h  compiler.h  constpointerstack.h  et-forward.h  etbase.h  funcs.h  globeval.cc  indexexpr.h  indexmap-forward.h  levicivita.h  listinit.h  memblock.cc  memblock.h  minmax.h  numinquire.h  numtrait.h  ops.h  prettyprint.h  promote.h  range.cc  range.h  ranks.h  reduce.h  shapecheck.h  simdtypes.h  tau.h  timer.h  tinymat2.cc  tinymat2.h  (+19 more)
blitz/array/: CMakeLists.txt  asexpr.cc  asexpr.h  cartesian.h  cgsolve.h  complex.cc  convolve.cc  convolve.h  cycle.cc  domain.h  et.h  expr.cc  expr.h  fastiter.h  funcs.h  functorExpr.h  geometry.h  indirect.h  interlace.cc  io.cc  iter.h  map.h  methods.cc  misc.cc  multi.h  newet-macros.h  newet.h  ops.cc  ops.h  reduce.cc  reduce.h  resize.cc  shape.h  slice.h  slicing.cc  stencil-et-macros.h  stencil-et.h  stencilops.h  stencils.cc  stencils.h  (+3 more)
blitz/generate/: arroperands.h  arroptuple.h  bzfstream.h  genstencils.py  operands.h  optuple.h  optuple2.h
blitz/meta/: CMakeLists.txt  dot.h  matassign.h  matmat.h  matvec.h  metaprog.h  product.h  sum.h  vecassign.h
cmake/: BlitzConfigFileName.cmake  CheckCXXFeatures.cmake  CreatePkgConfig.cmake  UnitTests.cmake
doc/: CMakeLists.txt  arrays-stencils.texi
doc/doxygen/: CMakeLists.txt
doc/examples/: CMakeLists.txt
doc/stencils/: CMakeLists.txt  dump-stencil.cpp.in
examples/: CMakeLists.txt  cfd.cpp  erf.cpp
lib/: CMakeLists.txt
manual/: Makefile.am
random/: F.h  beta.h  chisquare.h  default.h  discrete-uniform.h  exponential.h  gamma.h  mt.h  normal.h  uniform.h
testsuite/: CMakeLists.txt  iter.cpp
